--- a/roles/initial_deployment_debian/vars/main/userlist.yaml
+++ b/roles/initial_deployment_debian/vars/main/userlist.yaml
@@ -1,19 +1,5 @@
 ---
-# vars file for initial_deployment
-packages: ['vim','iotop','tcpdump','redis-server','net-tools','iptables-persistent']
-
-ip_add_priv: 172.20.80.100/24
-gw_priv: 192.168.59.144
-dest_net_conf: /etc/netplan/00-installer-config.yaml
-
-ssh_service_configuration:
-    - { regexp: '#Port 22', line: 'Port 58257'}
-    - { regexp: '#PubkeyAuthentication yes', line: 'PubkeyAuthentication yes'}
-    - { regexp: 'PasswordAuthentication yes', line: 'PasswordAuthentication no'}
-
-redis_configuration:
-    - { regexp: 'supervised no', line: 'supervised systemd'}
-    - { regexp: 'bind 127.0.0.1 ::1', line: 'bind 0.0.0.0'}
+# This file should be encrypted by ansible-vault in production
 
 user_details:
     - {name: 'sergey.petrov', uid: 1002 , groups: ['privileged'], comments: 'Director of Finance', shell: '/bin/bash', password: 'GraJn3445#', hash: '$6$5J0ZnOqwd5$64Lvx/26fmZuEFwnijBWxW0D8GO7OlA1HgJdU7RlYcPCtkWwuFilao4/e/eqL/TTRrYfwIIP00AJCE1NtQKLE1'}
