the Redhat support was added

--- a/roles/initial_deployment_debian/tasks/install_pkgs.yaml
+++ b/roles/initial_deployment_debian/tasks/install_pkgs.yaml
@@ -3,12 +3,12 @@
 
 - name: Install packages on Ubuntu
   block:
-    - name: Install common packages
+    - name: Install Ubuntu common packages
       apt:
        name: "{{ packages }}"
        state: present
        update_cache: True
-    - name: Install certain packages
+    - name: Install Ubuntu certain packages
       apt:
        name: ["redis-server", "iptables-persistent"]
        state: present
@@ -17,14 +17,19 @@
 
 - name: Install packages on Redhat
   block:
-    - name: Install common packages
+    - name: Install Redhat common packages
       yum:
        name: "{{ packages }}"
        state: present
        update_cache: True
-    - name: Install certain packages
+    - name: Install Redhat certain packages
       yum:
-       name: "redis"
+       name: ["redis", "iptables-services"]
        state: present
        update_cache: True
+    - name: Enable iptables-services
+      service:
+        name: iptables
+        state: started
+        enabled: yes
   when: ansible_os_family == "RedHat"
