--- a/roles/initial_deployment_debian/tasks/main.yml
+++ b/roles/initial_deployment_debian/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
 # tasks file for initial_deployment
 
-#- include: install_pkgs.yaml
-#- include: usr_create.yaml
+- include: install_pkgs.yaml
+- include: usr_create.yaml
 - include: network_cfg.yaml
 - include: sftp_cfg.yaml
 - include: redis_cfg.yaml
