LEMP + Wordpress initial setting up

--- a/init.yaml
+++ b/init.yaml
@@ -1,7 +1,8 @@
 ---
 - name: Initial Linux Configuration
-  hosts: all 
+  hosts: All 
   become: True
 
   roles:
-    - { role: initial_deployment_debian, when: ansible_os_family == 'Debian' or ansible_os_family == 'RedHat'}
+    - { role: initial_deployment_debian, when: ansible_os_family == 'Debian'}
+    #- { role: initial_deployment_debian, when: ansible_os_family == 'Debian' or ansible_os_family == 'RedHat'}
