--- a/roles/initial_deployment/handlers/main.yml
+++ b/roles/initial_deployment/handlers/main.yml
@@ -17,3 +17,8 @@
   service:
     name: nginx
     state: reloaded
+
+- name: "PHP-FPM restart"
+  service:
+    name: php7.4-fpm 
+    state: restarted
