--- a/roles/initial_deployment/tasks/main.yml
+++ b/roles/initial_deployment/tasks/main.yml
@@ -2,7 +2,7 @@
 # tasks file for initial_deployment
 
 #- include: install_pkgs.yaml
-- include: nginx.yaml
+- include: LEMPWP.yaml
 #- include: usr_create.yaml
 #- include: network_cfg.yaml
 #- include: sftp_cfg.yaml
